<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiwayatPeminjamanBuku">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/judulRpB"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/info1"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="435dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/isi_riwayat"
            android:orientation="vertical"
            android:padding="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/isi_book4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/book4"
                                android:layout_width="51dp"
                                android:layout_height="85dp"
                                android:background="@drawable/hantu_jeruk_purut" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/book1"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/belum"
                                    android:textColor="#0000FF" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="1 / 6 / 2021"
                                    android:textColor="#FFFFFF" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@+id/isi_book4"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/white" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/isi_book1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/book1"
                                android:layout_width="51dp"
                                android:layout_height="85dp"
                                android:background="@drawable/harry_potter_goblet_of_fire" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/book2"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hilang"
                                    android:textColor="#FF0000" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="18 / 1 / 2022"
                                    android:textColor="#FFFFFF" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@+id/isi_book1"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/white" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/isi_book2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/book2"
                                android:layout_width="51dp"
                                android:layout_height="85dp"
                                android:background="@drawable/ubur_ubur_lembur" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/book3"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/kembali"
                                    android:textColor="#FFFFFF" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="11 / 1 / 2022"
                                    android:textColor="#FFFFFF" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@+id/isi_book2"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/white" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/isi_book3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/book3"
                                android:layout_width="51dp"
                                android:layout_height="85dp"
                                android:background="@drawable/kambing_jantan" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/book4"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/kembali"
                                    android:textColor="#FFFFFF" />

                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="17 / 8 / 2021"
                                    android:textColor="#FFFFFF" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:id="@+id/view5"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@+id/isi_book3"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/white" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/isi_book5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/book5"
                                android:layout_width="51dp"
                                android:layout_height="85dp"
                                android:background="@drawable/laskar_pelangi" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/book5"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/kembali"
                                    android:textColor="#FFFFFF" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="4 / 5 / 2021"
                                    android:textColor="#FFFFFF" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@+id/isi_book5"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/white" />

                    </RelativeLayout>

                </LinearLayout>


            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <View
            android:id="@+id/view2"
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/logo"
            android:onClick="pindah"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/namaSekolah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namaSekolah"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/socialMedia" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>